Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Sep-2010 Andrew Eddie
 # Fixed issue [#22248] Fix inappropriate code comment (Brian Teeman, Bill Richardson).

02-Sep-2010 Ian MacLennan
 # Fixed typo in 15 to 16 diff sql file
 # Added missing semicolon in diff sql file.

02-Sep-2010 Jean-Marie Simonet
 # [#22149] Tool bar clean up focused on users with delete only. Thanks Elin.
 # [#22002] Edit state ACL in edit views. Thanks Elin.

02-Sep-2010 Andrew Eddie
 # Fixed issue [#22210] module latest users (Bill Richardson).
 # Fixed issue [#22211] module - latest news - typo error (Bill Richardson).
 # Fixed issue [#22169] After selecting cannot set -use default- (Klas Berlič1, Ian MacLennan).
 # Fixed issue [#22052] sample data menu capitalisation (Brian Teeman, Tim Plummer).
 # Fixed issue [#22170] Unable to Save Weblinks on Edit (Jennifer Marriott, Elin Waring).

01-Sep-2010 Andrew Eddie (and Happy 5th Birthday Joomla!)
 # Fixed issue [#22118] The setRedirect method() overwrites an already set messageType (Roland Dalmulder, Artyom Bisyarin).
 # Fixed issue [#21604] The "Memory Usage" debug info has no measurement unit (Javier Gómez, Nikolai Plath, Omar Ramos).
 # Fixed issue [#21862] Backend menu components are not ordered alphabetically (Hannes Papenberg).
 # Fixed issue [#21879] Speed improvement for Beez tempalte's use of html5.js (Rouven Weßling).
 # Fixed issue [#22037] Module manager - varies only (Brian Teeman, Bill Richardson).
 # Fixed issue [#21880] Relocate Database Prefix Portion of Database Configuration Installer Screen (Matt Thomas).
 # Fixed issue [#20427] Media Manager: impossible to upload image in the specific folder chosen (Jean-Marie Simonet, Hannes Papenberg).

31-Aug-2010 Jean-Marie Simonet